# HuggingFace-LambdaFunction

lh2/: Cargo.toml
lh2/src/: main.rs
