[package]
name = "lh2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
rand = "0.8"
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
openssl = { version = "0.10.35", features = ["vendored"] }

tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
rust_tokenizers = "8.1.1"
rust-bert = "0.22.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ordered-float = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
half = "2"
regex = "1.6"